fix: truncate long url in link preview for mobile, truncate tooltip

--- a/src/dotnet/UI.Blazor/Components/Tooltip/tooltip.css
+++ b/src/dotnet/UI.Blazor/Components/Tooltip/tooltip.css
@@ -8,6 +8,10 @@
     @apply text-base text-02;
     @apply pointer-events-none;
     @apply shadow-modal-narrow md:shadow-modal-wide;
+    max-width: 80vw;
+}
+.ac-tooltip-text {
+    @apply truncate;
 }
 
 .ac-tooltip-arrow {
